[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/bots/DestructibleDummy.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/node_fsm_plugin/fsm_node.gd" type="Script" id=2]
[ext_resource path="res://test_folder/test 2/Idle.gd" type="Script" id=3]
[ext_resource path="res://test_folder/test 2/Chase.gd" type="Script" id=4]
[ext_resource path="res://test_folder/test 2/BackOff.gd" type="Script" id=6]
[ext_resource path="res://test_folder/test 2/DestructibleDummy.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=4]
radius = 350.0

[sub_resource type="CircleShape2D" id=5]
radius = 180.0

[sub_resource type="CircleShape2D" id=3]
radius = 1000.0

[node name="DestructibleDummy" instance=ExtResource( 1 )]
script = ExtResource( 7 )

[node name="BackOffRange" type="Area2D" parent="." index="7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackOffRange" index="0"]
shape = SubResource( 4 )

[node name="ChargeRange" type="Area2D" parent="." index="8"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChargeRange" index="0"]
shape = SubResource( 5 )

[node name="DetectionRange" type="Area2D" parent="." index="9"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange" index="0"]
shape = SubResource( 3 )

[node name="TargetRay" type="RayCast2D" parent="." index="10"]
cast_to = Vector2( 1000, 0 )

[node name="VelocityRay" type="RayCast2D" parent="." index="11"]
cast_to = Vector2( 500, 0 )

[node name="FSM" type="Node" parent="." index="12"]
script = ExtResource( 2 )
initial_state = "Idle"
target = NodePath("..")

[node name="Idle" type="Node" parent="FSM" index="0"]
script = ExtResource( 3 )

[node name="Chase" type="Node" parent="FSM" index="1"]
script = ExtResource( 4 )

[node name="BackOff" type="Node" parent="FSM" index="2"]
script = ExtResource( 6 )
[connection signal="body_exited" from="BackOffRange" to="." method="_on_BackOffRange_body_exited"]
[connection signal="body_entered" from="ChargeRange" to="." method="_on_ChargeRange_body_entered"]
[connection signal="body_entered" from="DetectionRange" to="." method="_on_DetectionRange_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_DetectionRange_body_exited"]
